@@ -240,7 +240,7 @@
     <module id="ooo-build"/>
     <module id="phonemgr"/>
     <module id="pitivi"/>
-    <module id="pybliographer" branch="v_1_0_x"/>
+    <module id="pybliographer"/>
     <module id="quick-lounge-applet"/>
     <module id="release-notes"/>
     <module id="resapplet"/>
@@ -255,6 +255,7 @@
     <module id="tracker"/>
     <module id="webeyes"/>
     <module id="xchat-gnome"/>
+    <module id="xdg-user-dirs-gtk"/>
   </release>
   <release id="gnome-2-16" status="official" stringfrozen="true">
     <_description>Gnome 2.16 (old stable)</_description>
