@@ -1,3 +1,10 @@
+2007-05-07  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Added xdg-user-dirs-gtk to Extras.
+	Fixes bug #436587.
+	Pybliographer reset to HEAD.
+
 2007-05-04  Claude Paroz  <claude@2xlibre.net>
 
 	* people.xml.in:
